feat: implementing audits
